# The-Ultimate

./: .gitignore
CANSAT_COMMS/Cansat-Comms-Subsystem/: README.md
CANSAT_COMMS/Cansat-Comms-Subsystem/Week 1/: 1-receiver_script.py  1-sender_script.py  2-data_logger.py  3-command_sender.py  3-esp32_simulator.py  cansatdata.csv
DBMS Vita-Flow Project/: AI Agent Integration Guide.docx  ER_backchodi.txt  Final DB.xlsx  Workout Module.docx  ~$Final DB.xlsx
DBMS Vita-Flow Project/New ER Diagram/: ER_Submission_New_Version.docx  Final ER Diagram.md
DBMS Vita-Flow Project/Old ER Diagram/: ER_Submission.docx  ER_diagram.md
Emerald_Backend/: .env  database_stuff.txt  index.js  package-lock.json  package.json
Emerald_Backend/App/routes/: common_routes.js
Emerald_tasks/frontend/lib/: Auth.dart  main.dart
IRC-GUI/: .gitignore  CMakeLists.txt  README.md  package.xml
IRC-GUI/data/: telemetry.json
IRC-GUI/irc_gui/: camera_popup.html  index.html  install.sh  start_server.sh
IRC-GUI/irc_gui/config/: config.sh
IRC-GUI/irc_gui/css/: style.css
IRC-GUI/irc_gui/data/: mission_status.json  ping_status.json
IRC-GUI/irc_gui/js/: config.js  ld.js  main.js  map_module.js  ros_module.js
IRC-GUI/irc_gui/scripts/: init_nvgpu.sh  monitor_mission.sh  server.py  servo.sh  start_arm.sh  start_cameras.sh  start_drive.sh  start_ld.sh  start_mission.sh  stop_mission.sh  switch_mode.sh  utils.sh
IRC-GUI/scripts/: gui_backend_node.py  telemetry_bridge_node.py
Karan.aedtresults/: HFSSDesign1.asol  ManagedFiles_Design0.asol
Karan.aedtresults/HFSSDesign1.results/: DV29_S26_SD1_V0.su  DV29_S26_SD2_V0.su  DV29_S26_V0.EMConvData  DV29_S26_V0.profile  DV29_S32_V0_F102_SU.txt  DV29_S32_V0_F103_SU.txt  DV29_S32_V0_F104_SU.txt  DV29_S32_V0_F105_SU.txt  DV29_SOL27_M1_V0.sd  DV29_SOL27_M2_V0.sd  DV29_SOL28_M0_V0.sd  DV29_SOL32_M0_V0.sd  DV29_V23.Imprint.idmap
Karan.aedtresults/HFSSDesign1.results/DV29_S26_ADP2_V0.sd/: native.adp
Karan.aedtresults/HFSSDesign1.results/DV29_S26_MI0_V0.sd/: current.stats
Kratos_LD/: Kratos-LD1-Karan_Pote.docx  Kratos-LD2(a)-KaranPote.docx  Kratos-LD2(b)-KaranPote.docx  Kratos-LD3(a)-KaranPote.docx  Kratos-LD3(b)-KaranPote.docx  Kratos-LD4(a)-KaranPote.docx
Power Distribution Schematic Design/: Power Distribution Schematic Design.kicad_prl  Power Distribution Schematic Design.kicad_pro  Power Distribution Schematic Design.kicad_sch
Quark-26-Flutter/: README.md  firebase.json  flutter_launcher_icons.yaml  pubspec.yaml
Quark-26-Flutter/lib/: main.dart
Quark-26-Flutter/linux/: CMakeLists.txt
Quark-26-Flutter/test/: widget_test.dart
Quark-26-Flutter/web/: index.html  manifest.json
Quark-26-Flutter/windows/: CMakeLists.txt
Solar Panel Project/: README.md
Solar Panel Project/Motor_and_Sensor_Solar_Panel/: Motor_and_Sensor_Solar_Panel.ino
Spree26-Flutter/: README.md
Spree26-Flutter/linux/: CMakeLists.txt
Spree26-Flutter/windows/: CMakeLists.txt
VITA-FLOW-Frontend/: README.md
checkpoint2_sim_Auto_latest_code/Cone/cone_handling/: package.xml  setup.cfg  setup.py
checkpoint2_sim_Auto_latest_code/Cone/cone_handling/cone_handling/: .cone_follower_node.py.swp  cone_follower_node.py
checkpoint2_sim_Auto_latest_code/Cone/cone_msgs/: CMakeLists.txt  package.xml
checkpoint2_sim_Auto_latest_code/Cone/cone_msgs/action/: FollowCone.action
checkpoint2_sim_Auto_latest_code/Cone/cone_msgs/msg/: ConeDetection.msg  ConeDetectionArray.msg
checkpoint2_sim_Auto_latest_code/kratos-rover/: README.md
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/: CMakeLists.txt  package.xml
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/config/: controllers.yaml
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/launch/: kratos_gazebo.launch.py
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/models/construction_cone_blue/: model-1_3.sdf  model-1_4.sdf  model.sdf
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/models/construction_cone_green/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/models/construction_cone_red/: model-1_3.sdf  model-1_4.sdf  model.sdf
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/models/construction_cone_white/: model-1_3.sdf  model-1_4.sdf  model.sdf
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/models/construction_cone_yellow/: model-1_3.sdf  model-1_4.sdf  model.sdf
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/scripts/: fake_mavros.py
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/urdf/: kratos.gazebo.xacro
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_gazebo/worlds/: cones.world  cones1.world  empty.world  test.world
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_nav2/: CMakeLists.txt  package.xml
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_nav2/config/: nav2_params.yaml  nav2_params.yaml.save
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_nav2/launch/: kratos_nav2.launch.py
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_vel_clamp/: CMakeLists.txt  package.xml
checkpoint2_sim_Auto_latest_code/kratos-rover/kratos_vel_clamp/scripts/: littlekids.py  publish_empty_map.py  velclamp.py
quark-registeration-portal/: package-lock.json  package.json
quark2/: README.md  pubspec.yaml
quark2/ios/Runner/: Info.plist
quark2/lib/: main.dart
quark2/linux/: CMakeLists.txt
quark2/test/: widget_test.dart
quark2/web/: index.html  manifest.json
spree_dummy/: README.md  pubspec.yaml
spree_dummy/lib/: gatePass.dart
spree_dummy/linux/: CMakeLists.txt
spree_dummy/web/: index.html  manifest.json
vita-flow-dummy/: tp
vita-flow-frontend_krishav/vita-flow-frontend/: index.html  package-lock.json
(+153 files in other folders)
